--- a/index.html
+++ b/index.html
@@ -1,1 +1,58 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>Test Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="This is a test page." />
+
+  <meta property="og:title" content="TEST | Page" />
+  <meta property="og:description" content="This is a test page." />
+  <meta property="og:type" content="website">
+  <meta propery="og:url" content="http://seishin8.github.io/" />
+  <meta property="og:image" content="http://t1.gstatic.com/images?q=tbn:ANd9GcTgJjd4r8HMDI7NcrjSLW3urVYMASyrQQaBPXwfyvW4-ZpUrgmU" />
+  <meta property="og:title" content="Test Share Title">
+  <meta property="og:description" content="Test share description. #Test">
+  <meta property="og:locale" content="en_us">
+  <meta property="og:locale:alternate" content="fr_FR">
+  <meta property="og:locale:alternate" content="ar_ae">
+  <meta property="og:locale:alternate" content="nl_NL">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="de_DE">
+  <meta property="og:locale:alternate" content="it_IT">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="nl_NL">
+  <meta property="og:locale:alternate" content="pt_br">
+  <meta property="og:locale:alternate" content="fr_fr">
+  <meta property="og:locale:alternate" content="es_es">
+  <meta property="og:locale:alternate" content="sv_se">
+  <meta property="og:locale:alternate" content="nb_no">
+  <meta property="og:locale:alternate" content="nl_nl">
+  <meta property="og:locale:alternate" content="zh_cn">
+  <meta property="og:locale:alternate" content="ru_ru">
+  <meta property="og:locale:alternate" content="pl_pl">
+  <meta property="og:locale:alternate" content="de_de">
+  <meta property="og:locale:alternate" content="it_it">
+  <meta property="og:locale:alternate" content="ja_jp">
+  <meta property="og:locale:alternate" content="fi_fi">
+  <meta property="og:locale:alternate" content="da_dk">
+  <meta property="og:locale:alternate" content="tr_tr">
+  <meta property="og:video" content="http://www.youtube-nocookie.com/embed/2xzTbDGKpAA?rel=0&amp=&autoplay=1">
+  <meta property="og:video:type" content="application/x-shockwave-flash">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:url" content="http://seishin8.github.io/">
+  <meta name="twitter:title" content="Test Share Title TW">
+  <meta name="twitter:description" content="Test share description tw. #TestTW">
+  <meta name="twitter:image" content="http://t1.gstatic.com/images?q=tbn:ANd9GcTgJjd4r8HMDI7NcrjSLW3urVYMASyrQQaBPXwfyvW4-ZpUrgmU">
+  <meta name="twitter:site" content="@seishin">
+
+</head>
+<body>
+  <div class="container home">
+    <h1 class="heading">Test Page</h1>
+    <a href="https://www.youtube-nocookie.com/embed/2xzTbDGKpAA?rel=0&amp=&autoplay=1">Link to video</a>
+  </div>
+
+  <!-- Da JavaScripts -->
+  <script type="text/javascript" src="/js/main.js"></script>
+</body>
+</html>
