--- a/index.html
+++ b/index.html
@@ -13,29 +13,28 @@
   <meta property="og:title" content="Test Share Title">
   <meta property="og:description" content="Test share description. #Test">
   <meta property="og:locale" content="en_us">
-  <meta property="og:locale:alternate" content="fr_FR">
-  <meta property="og:locale:alternate" content="ar_ae">
+  <meta property="og:locale:alternate" content="ar_AE">
   <meta property="og:locale:alternate" content="nl_NL">
   <meta property="og:locale:alternate" content="es_ES">
   <meta property="og:locale:alternate" content="de_DE">
   <meta property="og:locale:alternate" content="it_IT">
   <meta property="og:locale:alternate" content="es_ES">
   <meta property="og:locale:alternate" content="nl_NL">
-  <meta property="og:locale:alternate" content="pt_br">
-  <meta property="og:locale:alternate" content="fr_fr">
-  <meta property="og:locale:alternate" content="es_es">
-  <meta property="og:locale:alternate" content="sv_se">
-  <meta property="og:locale:alternate" content="nb_no">
-  <meta property="og:locale:alternate" content="nl_nl">
-  <meta property="og:locale:alternate" content="zh_cn">
-  <meta property="og:locale:alternate" content="ru_ru">
-  <meta property="og:locale:alternate" content="pl_pl">
-  <meta property="og:locale:alternate" content="de_de">
-  <meta property="og:locale:alternate" content="it_it">
-  <meta property="og:locale:alternate" content="ja_jp">
-  <meta property="og:locale:alternate" content="fi_fi">
-  <meta property="og:locale:alternate" content="da_dk">
-  <meta property="og:locale:alternate" content="tr_tr">
+  <meta property="og:locale:alternate" content="pt_BR">
+  <meta property="og:locale:alternate" content="fr_FR">
+  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="sv_SE">
+  <meta property="og:locale:alternate" content="nb_NO">
+  <meta property="og:locale:alternate" content="nl_NL">
+  <meta property="og:locale:alternate" content="zh_CN">
+  <meta property="og:locale:alternate" content="ru_RU">
+  <meta property="og:locale:alternate" content="pl_PL">
+  <meta property="og:locale:alternate" content="de_DE">
+  <meta property="og:locale:alternate" content="it_IT">
+  <meta property="og:locale:alternate" content="ja_JP">
+  <meta property="og:locale:alternate" content="fi_FI">
+  <meta property="og:locale:alternate" content="da_DK">
+  <meta property="og:locale:alternate" content="tr_TR">
   <meta property="og:video" content="http://www.youtube-nocookie.com/embed/2xzTbDGKpAA?rel=0&amp=&autoplay=1">
   <meta property="og:video:type" content="application/x-shockwave-flash">
   <meta name="twitter:card" content="summary">
