--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <meta property="og:title" content="Test Share Title">
   <meta property="og:description" content="Test share description. #Test">
   <meta property="og:locale" content="en_us">
-  <meta property="og:locale:alternate" content="ar_AE">
+  <!--<meta property="og:locale:alternate" content="ar_AE">-->
   <meta property="og:locale:alternate" content="nl_NL">
   <meta property="og:locale:alternate" content="es_ES">
   <meta property="og:locale:alternate" content="de_DE">
