--- a/index.html
+++ b/index.html
@@ -14,27 +14,22 @@
   <meta property="og:description" content="Test share description. #Test">
   <meta property="og:locale" content="en_us">
   <!--<meta property="og:locale:alternate" content="ar_AE">-->
-  <meta property="og:locale:alternate" content="nl_NL">
-  <meta property="og:locale:alternate" content="es_ES">
+  <meta property="og:locale:alternate" content="da_DK">
   <meta property="og:locale:alternate" content="de_DE">
-  <meta property="og:locale:alternate" content="it_IT">
   <meta property="og:locale:alternate" content="es_ES">
-  <meta property="og:locale:alternate" content="nl_NL">
-  <meta property="og:locale:alternate" content="pt_BR">
+  <meta property="og:locale:alternate" content="fi_FI">
   <meta property="og:locale:alternate" content="fr_FR">
-  <meta property="og:locale:alternate" content="es_ES">
-  <meta property="og:locale:alternate" content="sv_SE">
-  <meta property="og:locale:alternate" content="nb_NO">
-  <meta property="og:locale:alternate" content="nl_NL">
-  <meta property="og:locale:alternate" content="zh_CN">
-  <meta property="og:locale:alternate" content="ru_RU">
-  <meta property="og:locale:alternate" content="pl_PL">
-  <meta property="og:locale:alternate" content="de_DE">
   <meta property="og:locale:alternate" content="it_IT">
   <meta property="og:locale:alternate" content="ja_JP">
-  <meta property="og:locale:alternate" content="fi_FI">
-  <meta property="og:locale:alternate" content="da_DK">
+  <meta property="og:locale:alternate" content="nb_NO">
+  <meta property="og:locale:alternate" content="nl_NL">
+  <meta property="og:locale:alternate" content="pl_PL">
+  <meta property="og:locale:alternate" content="pt_BR">
+  <meta property="og:locale:alternate" content="ru_RU">
+  <meta property="og:locale:alternate" content="sv_SE">
   <meta property="og:locale:alternate" content="tr_TR">
+  <meta property="og:locale:alternate" content="zh_CN">
+  <meta property="og:locale:alternate" content="zh_TW">
   <meta property="og:video" content="http://www.youtube-nocookie.com/embed/2xzTbDGKpAA?rel=0&amp=&autoplay=1">
   <meta property="og:video:type" content="application/x-shockwave-flash">
   <meta name="twitter:card" content="summary">
