--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="This is a test page." />
 
-  <meta property="og:title" content="TEST | Page" />
-  <meta property="og:description" content="This is a test page." />
-  <meta property="og:type" content="website">
-  <meta propery="og:url" content="http://seishin8.github.io/" />
-  <meta property="og:image" content="http://t1.gstatic.com/images?q=tbn:ANd9GcTgJjd4r8HMDI7NcrjSLW3urVYMASyrQQaBPXwfyvW4-ZpUrgmU" />
   <meta property="og:title" content="Test Share Title">
   <meta property="og:description" content="Test share description. #Test">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="http://seishin8.github.io/" />
+  <meta property="og:image" content="http://t1.gstatic.com/images?q=tbn:ANd9GcTgJjd4r8HMDI7NcrjSLW3urVYMASyrQQaBPXwfyvW4-ZpUrgmU" />
   <meta property="og:locale" content="en_us">
   <!--<meta property="og:locale:alternate" content="ar_AE">-->
   <meta property="og:locale:alternate" content="da_DK">
